--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="http://www.bublai-sayansinha.tk/uploads/3/9/8/6/3986519/bloggif_57693ac24f1d9.gif" type="image/x-icon">
 
     <title>Sayan Sinha</title>
 
