--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>I am a second year student at <a href="https://iitkgp.ac.in">IIT Kharagpur</a>, India.</p>
+                <p>I am a second year student at <a href="http://iitkgp.ac.in" target="_blank">IIT Kharagpur</a>, India.</p>
                 <p>I like contributing to open source and I wish to make significant contributions in the form of code.</p>
                 <p>I am a memeber of the Artificial Intelligence team at <a href="http://krssg.in/" target="_blank">Kharagpur RoboSoccer Students' Group (KRSSG)</a>. I am a core team member of <a href="https://kossiitkgp.in" target="_blank">Kharagpur Open Source Society (KOSS)</a>. Along with that, I am also a part of the software team at <a href="http://swarm-iitkgp.github.io/" target="_blank">Swarm Robotics, IIT Kharagpur</a>.
             </div>
