--- a/contact.html
+++ b/contact.html
@@ -32,37 +32,7 @@
 </head>
 
 <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="index.html">Sayan Sinha</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+     <script type="text/javascript" src="header.js"></script>
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
@@ -128,49 +98,7 @@
     <hr>
 
  <!-- Footer -->
-     <footer>
-         <div class="container">
-             <div class="row">
-                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                     <ul class="list-inline text-center">
-                         <li>
-                             <a href="https://medium.com/@americast" target="_blank">
-                                 <span class="fa-stack fa-lg">
-                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                     <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                                 </span>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="mailto:sayan.sinha@iitkgp.ac.in">
-                                 <span class="fa-stack fa-lg">
-                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                                 </span>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="https://github.com/americast" target="_blank">
-                                 <span class="fa-stack fa-lg">
-                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                 </span>
-                             </a>
-                         </li>
-                         <li>
-                             <a href="https://www.linkedin.com/in/sayan-sinha" target="_blank">
-                                 <span class="fa-stack fa-lg">
-                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                                 </span>
-                             </a>
-                         </li>
-                     </ul>
-                     <p class="copyright text-muted">2017 | Sayan Sinha</p>
-                 </div>
-             </div>
-         </div>
-     </footer>
+     <script type="text/javascript" src="footer.js"></script>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
