--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
                     <div class="site-heading">
                         <h1>Blog</h1>
                         <hr class="small">
-                        <span class="subheading">https://medium.com/@americast</span>
+                        <span class="subheading"><a href="https://medium.com/@americast" target="_blank" style="color: #ffffff;">https://medium.com/@americast</a></span>
                     </div>
                 </div>
             </div>
