--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="http://bublai-ml.weebly.com/uploads/3/9/8/6/3986519/bloggif_57693ac24f1d9.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="img/cover.gif" type="image/x-icon">
     <title>Sayan Sinha - Contact</title>
 
     <!-- Bootstrap Core CSS -->
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-             <p>Get in touch with me at <a href="mailto:sayan.sinha@iitkgp.ac.in">sayan.sinha@iitkgp.ac.in</a> or <a href="mailto:contact@sayansinha.tk">contact@sayansinha.tk</a> .</p>
+             <p>Get in touch with me via email or Google Hangouts at <a href="mailto:sayan.sinha@iitkgp.ac.in">sayan.sinha@iitkgp.ac.in</a>.
                 <!-- <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p> -->
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
